--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "vite": "^6.1.1"
   },
   "devDependencies": {
+    "@types/node": "^22.13.5",
+    "@types/pg": "^8.11.11",
     "@types/react": "^19.0.10",
     "@types/recharts": "^1.8.29"
   }
