--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.1.0",
     "@astrojs/solid-js": "^5.0.4",
     "@astrojs/tailwind": "^6.0.0",
+    "@astrojs/vercel": "^8.1.0",
     "@fontsource-variable/roboto-condensed": "^5.1.1",
     "@fontsource/lilita-one": "^5.1.1",
     "astro": "^5.3.0",
